Permit hex/octal parameters to cmp, to match what the manual page says.

PR:		3850, 3855